--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,45 @@
-atomicwrites==1.4.0
-attrs==20.3.0
+aiofiles==0.8.0
+anyio==3.4.0
+asgiref==3.4.1
+attrs==21.4.0
 bcrypt==3.2.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
 click==7.1.2
-colorama==0.4.4
-coverage==5.5
+coverage==6.2
 dnspython==2.1.0
-ecdsa==0.14.1
-email-validator==1.1.2
+ecdsa==0.17.0
+email-validator==1.1.3
 fastapi==0.63.0
-greenlet==1.0.0
+greenlet==1.1.2
+gunicorn==20.1.0
 h11==0.12.0
-idna==2.10
+idna==3.3
 iniconfig==1.1.1
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-packaging==20.9
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+packaging==21.3
 passlib==1.7.4
-pluggy==0.13.1
-psycopg2==2.8.6
-py==1.10.0
+pluggy==1.0.0
+psycopg2==2.9.3
+py==1.11.0
 pyasn1==0.4.8
-pycparser==2.20
-pydantic==1.8.1
-pyparsing==2.4.7
-pytest==6.2.3
+pycparser==2.21
+pydantic==1.9.0
+pyparsing==3.0.6
+pytest==6.2.5
 pytest-cov==2.11.1
-python-dotenv==0.17.0
-python-jose==3.2.0
+python-dotenv==0.19.2
+python-jose==3.3.0
 python-multipart==0.0.5
-requests==2.25.1
-rsa==4.7.2
-six==1.15.0
-SQLAlchemy==1.4.11
+requests==2.27.0
+rsa==4.8
+six==1.16.0
+sniffio==1.2.0
+SQLAlchemy==1.4.29
 starlette==0.13.6
 toml==0.10.2
-typing-extensions==3.7.4.3
-urllib3==1.26.4
+typing_extensions==4.0.1
+urllib3==1.26.7
 uvicorn==0.13.4
