--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ fastapi==0.63.0
 greenlet==1.1.2
 gunicorn==20.1.0
 h11==0.12.0
+httptools==0.1.2
 idna==3.3
 iniconfig==1.1.1
 Jinja2==3.0.3
@@ -33,6 +34,7 @@ pytest-cov==2.11.1
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
+PyYAML==6.0
 requests==2.27.0
 rsa==4.8
 six==1.16.0
@@ -43,3 +45,6 @@ toml==0.10.2
 typing_extensions==4.0.1
 urllib3==1.26.7
 uvicorn==0.13.4
+uvloop==0.16.0
+watchgod==0.7
+websockets==8.1
